<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="VoltMonitor_DB" Id="{860f77a6-4bc2-402b-92d3-cf7c77cd35cf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Heartbeat : BOOL;
	BateryOn  : BOOL;
	Channel	: USINT; //ST_AnalogCHSelection;
	VoltageReading_raw : ARRAY[0..15] OF INT;
	VoltageReading_norm : ARRAY[0..15] OF REAL;
	VoltageReading	: ARRAY[0..15] OF REAL;
	LoadMaxRatedV	: REAL := 35000; //-2k TO 35kV
	LoadMinRatedV	: REAL := -2000; 
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>