<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="ALIAS" Id="{ce187cc1-3358-4b09-8015-f8e6a5a5070e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ALIAS
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* ALIAS Map 
Can be used for wiring and variable linking. ! Remember to SETUP and link AI1-4 LIMIT1 Bits !
Disclaimers: 
Digital IO PCB input Ch3/4 are inverted - No light in, 24V. Wired to PLC_DO6/7
Look at specifcations document for mapping.
*)
	// Digital Input
	GVL.mechINTERLOCK 			:= GVL.PLC_DI1 ;	// Normally Low when not interlock
	GVL.softdump_contact 		:= GVL.PLC_DI2 ;		// NL when no FB. Goes high when the relay is engaged and is not soft dumping.
	GVL.psuONOFF 				:= GVL.PLC_DI3 ;	// To PSU High Voltage Monitor - Normally HIGH when HV OFF/ sig
	GVL.psusumFAULT 			:= GVL.PLC_DI4 ;	// To PSU Sum Fault - NH when no fault/ sig
	//GVL.psuINTERLOCK 			:= GVL.PLC_DI5 ;	// To PSU Interlock. Unknown if NH or NL
	GVL.ctrl_box_dump_feedback 	:= GVL.PLC_DI5;
	GVL.EOCStatus 				:= GVL.PLC_DI6 ;		// End of charge - NH when not EOC
	GVL.sparkdetect 			:= GVL.PLC_DI7 ;		// DI Extra1 - Mech TEST STOP sw - Normally LOW. Not used.
	GVL.chargeCOIL_contact 		:= GVL.PLC_DI8 ;	// NL
	GVL.shotCOILrdy 			:= GVL.PLC_DI9 ;		// NL
	GVL.FireDetected 			:= GVL.PLC_DI10 ;   // for Fire Detection
	VoltMonitor_DB.Heartbeat 	:= GVL.B170357_Heartbeat;//:= GVL.PLC_DI11 ;   // Voltage Monitor Heartbeat
	VoltMonitor_DB.BateryOn		:= GVL.B170357_BatLevel;//:= GVL.PLC_DI12 ;
	VoltMonitor_DB.CapRaw	    := GVL.B170357_CapRaw;
	(*GVL. := GVL.PLC_DI13 ;
	GVL. := GVL.PLC_DI14 ;
	GVL. := GVL.PLC_DI15 ;
	GVL. := GVL.PLC_DI16 ;
	*)
	
		// Digital Out
	GVL.PLC_DO1 := GVL.shotCOIL ;	// NO
	GVL.PLC_DO2 := GVL.softdump ;	// NC
	GVL.PLC_DO3 := GVL.psuInhibit ;	// To PSU Inhibit - NO
	GVL.PLC_DO4 := GVL.selectREMOTE ;		// To PSU Remote/ Local Select - NO
	GVL.PLC_DO5 := GVL.chargeCOIL ;		// To charge SSR - NO
	GVL.PLC_DO6 := GVL.scopetrigger ;	// NO - To scope trigger
		
	GVL.PLC_DO7 := GVL.testNUMexceed ;
	GVL.PLC_DO8 := GVL.charging_alarm ;
	GVL.PLC_DO9 := GVL.chrg_to_fire_trig ;   
	GVL.PLC_DO10 := GVL.sparkCharger_ON;  // added for the spark charger power supply sept 21, 2022 GL
	GVL.PLC_DO11 := GVL.sparkCharger_SP_Enable; // added for the spark charger power supply sept 21, 2022 GL
	GVL.PLC_DO12 := VoltMonitor_DB.Channel.0; //a0
	GVL.PLC_DO13 := VoltMonitor_DB.Channel.1; //a1
	GVL.PLC_DO14 := VoltMonitor_DB.Channel.2;
	GVL.PLC_DO15 := VoltMonitor_DB.Channel.3;
	(*GVL.PLC_DO16 := GVL. ;
	*)
	
		// Analog In
			// AI1-4 has 4mA lower limit fault bits *)
	GVL.rawTEMPcap1 := GVL.PLC_AI1 ;
	GVL.rawTEMPdump := GVL.PLC_AI2 ;
	GVL.rawTEMPload := GVL.PLC_AI3 ;
	GVL.rawTEMPambient := GVL.PLC_AI4 ;
	GVL.rawVcap1 := GVL.PLC_AI5 ;
	GVL.psuVmonitor := GVL.PLC_AI6 ;	// To PSU V Monitor. Not used
	GVL.raw_HV_monitor := GVL.PLC_AI7  ;
	
	GVL.raw_Spark_gap_voltage := GVL.PLC_AI8 ;
	GVL.raw_VoltageMonitor := GVL.PLC_AI9 ;
	(*GVL. := GVL.PLC_AI10 ;
	GVL. := GVL.PLC_AI11 ;
	GVL. := GVL.PLC_AI12 ;
	*)
		// Analog In - LIMITs (These are directly linked, check GVLs)
		
		// Analog Out
	GVL.PLC_AO1 := GVL.psuVCTRL ;	// To PSU Remote Voltage
	(*
	GVL.PLC_AO2 := GVL. ;
	*)
	
	// Ethernet (These are directly linked)]]></ST>
    </Implementation>
    <LineIds Name="ALIAS">
      <LineId Id="6" Count="5" />
      <LineId Id="13" Count="5" />
      <LineId Id="89" Count="0" />
      <LineId Id="19" Count="3" />
      <LineId Id="24" Count="2" />
      <LineId Id="93" Count="0" />
      <LineId Id="27" Count="34" />
      <LineId Id="85" Count="0" />
      <LineId Id="63" Count="13" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>