<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="VoltMonitor" Id="{ab398dd9-3a48-4aac-bec4-7b546cd8c4a7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM VoltMonitor
VAR
	i : USINT := 0;
	counter : USINT := 0;
	b : ARRAY[0..3] OF BOOL;
	b1 : BOOL;
	b2 : BOOL;
	b3 : BOOL;
	pause : BOOL;
	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(*IF Heartbeat.pulse_ms = TRUE AND pause = FALSE THEN
	i := i + 1;
	counter := 16-i;
	IF counter >= 16 THEN 
		counter := 0;
	END_IF
	VoltMonitor_DB.Channel := counter ;
	VoltMonitor_DB.VoltageReading_raw[counter] := GVL.raw_VoltageMonitor;
END_IF*)

b[0] := 0; //VoltMonitor_DB.Channel.0;
b[1] := 0; //VoltMonitor_DB.Channel.1;
b[2] := 0; //VoltMonitor_DB.Channel.2;
b[3] := 0; //VoltMonitor_DB.Channel.3;
//VoltMonitor_DB.VoltageReading_raw[0] := GVL.raw_VoltageMonitor;


//VoltMonitor_DB.CapRaw_Str :=  MID (UINT_TO_STRING (GVL.B170357_CapRaw), 10, 5);



//VoltMonitor_DB.VoltageReading_raw[0] := VoltMonitor_DB.CapRaw; //STRING_TO_INT (VoltMonitor_DB.CapRaw_Str);

IF GVL.B170357_Heartbeat = 1 THEN
	VoltMonitor_DB.VoltageReading_raw[0].0 := VoltMonitor_DB.CapRaw.2;
	VoltMonitor_DB.VoltageReading_raw[0].1 := VoltMonitor_DB.CapRaw.3;
	VoltMonitor_DB.VoltageReading_raw[0].2 := VoltMonitor_DB.CapRaw.4;
	VoltMonitor_DB.VoltageReading_raw[0].3 := VoltMonitor_DB.CapRaw.5;
	
	VoltMonitor_DB.VoltageReading_raw[0].4 := VoltMonitor_DB.CapRaw.6;
	VoltMonitor_DB.VoltageReading_raw[0].5 := VoltMonitor_DB.CapRaw.7;
	VoltMonitor_DB.VoltageReading_raw[0].6 := VoltMonitor_DB.CapRaw.8;
	VoltMonitor_DB.VoltageReading_raw[0].7 := VoltMonitor_DB.CapRaw.9;
	
	VoltMonitor_DB.VoltageReading_raw[0].8 := VoltMonitor_DB.CapRaw.10;
	VoltMonitor_DB.VoltageReading_raw[0].9 := VoltMonitor_DB.CapRaw.11;
	
	VoltMonitor_DB.VoltageReading_raw[0].10 := 0;//VoltMonitor_DB.CapRaw.14;
	VoltMonitor_DB.VoltageReading_raw[0].11 := 0;//VoltMonitor_DB.CapRaw.15;
	VoltMonitor_DB.VoltageReading_raw[0].12 := 0;//VoltMonitor_DB.CapRaw.12;
	VoltMonitor_DB.VoltageReading_raw[0].13 := 0;//VoltMonitor_DB.CapRaw.13;
	VoltMonitor_DB.VoltageReading_raw[0].14 := 0; //VoltMonitor_DB.CapRaw.14;
	
	VoltMonitor_DB.VoltageReading_raw[0].15 := 0;//VoltMonitor_DB.CapRaw.4;
	VoltMonitor_DB.CapRaw_DummySnap := GVL.B170357_CapRaw;//VoltMonitor_DB.VoltageReading_raw[0];
END_IF


IF pause = TRUE THEN
	VoltMonitor_DB.VoltageReading_raw[0] := 0;
END_IF;

IF i > 16 THEN 
	i := 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="VoltMonitor">
      <LineId Id="87" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="101" Count="2" />
      <LineId Id="96" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="63" Count="2" />
      <LineId Id="104" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="160" Count="3" />
      <LineId Id="183" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="166" Count="3" />
      <LineId Id="184" Count="0" />
      <LineId Id="170" Count="1" />
      <LineId Id="185" Count="0" />
      <LineId Id="172" Count="4" />
      <LineId Id="159" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="177" Count="1" />
      <LineId Id="122" Count="0" />
      <LineId Id="179" Count="1" />
      <LineId Id="182" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="21" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>